# icg_benchmark

./: README.md  pyproject.toml  requirements.txt  setup.py
icg_benchmark/: __init__.py
icg_benchmark/grasping/eval/: __init__.py  base.py  edge_grasp_evaluator.py
icg_benchmark/grasping/planners/: __init__.py  base.py  edgegrasp.py  giga.py  icgnet.py
icg_benchmark/grasping/preprocessing/: __init__.py  base.py  pc.py  tsdf.py
icg_benchmark/grasping/view_samplers/: top_down_view.py
icg_benchmark/models/edge_grasp/: dataset_processor.py  edge_grasp_network.py  edge_grasper.py  utils.py  vn_edge_grasp_network.py  vn_edge_grasper.py  vn_pointnetpp.py
icg_benchmark/models/giga/: networks.py  planner.py
icg_benchmark/reconstruction/: eval_reconstruction.py  eval_reconstruction_voxel.py
icg_benchmark/simulator/: btsim.py  grasp.py  io_smi.py  perception.py  simulation_clutter_bandit.py  transform.py  utility.py
icg_benchmark/utils/: seed.py
icg_benchmark/utils/timing/: timer.py
scripts/: download_data.py  inference.py  scan.ply  test_edge.py  test_giga.py  test_icgnet.py  test_vgn.py
